--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Assignment_3</title>
 </head>
-<body>
+<body style="margin:5%">
     <p>
         Cat ipsum dolor sit amet, jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed. Go into a room to decide you didn't want to be in there anyway. I like big cats and i can not lie kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff. Meow i could pee on this if i had the energy for slap owner's face at 5am until human fills food dish yet scamper
     </p>
@@ -13,7 +13,7 @@
     <br>
 
     <div>
-        <ul>
+        <ul style="margin-left: -1.7%;">
             <li>Cat ipsum dolor sit amet, jump launch to pounce upon </li><br>
             <li>Cat ipsum dolor sit amet, jump launch to pounce upon </li>
             <li>Cat ipsum dolor sit amet, jump launch to pounce upon </li>
@@ -27,14 +27,14 @@
             <li>Cat ipsum dolor sit amet, jump launch to pounce upon </li>
         </ul>
     </div>
-    
-    <div style="width: 45%;">
+    <div style="width: 100%;"> 
+    <div style="width: 50%; float: left;">
         <p>Cat ipsum dolor sit amet, jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed. Go into a room to decide you didn't want to be in there anyway. I like big cats and i can not lie kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff. Meow i could pee on this if i had the energy for slap owner's face at 5am until human fills food dish yet scamper</p>
     </div>
-    <div style="margin-left: 50%; width: 45%; margin-top: -9%;">
+    <div style="width: 50%; float: left;">
         <p>Cat ipsum dolor sit amet, jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed. Go into a room to decide you didn't want to be in there anyway. I like big cats and i can not lie kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff. Meow i could pee on this if i had the energy for slap owner's face at 5am until human fills food dish yet scamper</p>
     </div>
-
+    </div>
 
     
 </body>
